Answer 6
Establishing a baseline.